Revert "Add adjustments for browsers with fixed scrollbar"
This reverts commit 462a3eb5e6b83f9d8091b83e3f8dc458236938ed.

We're reverting this to see if it is the cause of our recent CSS
performance issues.

(imported from commit 6a0b041cfcb6770bbfda0d354444bad2d64459ab)

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -390,7 +390,10 @@ a:hover code {
 #user_presences, #group-pms {
     list-style-position: inside; /* Draw the bullets inside our box */
     margin-left: 0;
-    overflow-y:  auto;
+    overflow-y:  hidden;
+}
+#user_presences:hover, #group-pms:hover {
+    overflow-y: auto;
 }
 
 #user_presences li:hover, #group-pms li:hover {
